# tinyworlds-viewer

./: .gitignore  CONTESTANT_TASK.md  DATASET_NOTES.md  README.md  app.py  attempt.sh  pyproject.toml  test.sh
src/tinyworlds_viewer/: __init__.py  dataset.py  visuals.py
tests/: test_dataset.py  test_visuals.py
